# k4c

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.zig  flake.nix
.agents/skills/writing-git-commits/: SKILL.md
.github/: README.md
.github/scripts/: validate-commits.sh  validate-naming.sh
.github/workflows/: docs.yml  flake.yml  pre-merge.yml  release.yml
cmake/: benchmarks.cmake  install.cmake  k4cConfig.cmake.in  tests.cmake
docs/: mkdocs.yml  zensical.toml
docs-site/docs/reference/: cstd-mem-allocator.md
docs/docs/: index.md
docs/docs/buffer/: cursor.md
docs/docs/data-structures/: binary-heap.md  deque.md  doubly-linked-list.md  hashmap.md  hashset.md  iterator.md  linked-list.md  string.md  vector.md
docs/docs/io/: file-reader.md  reader.md
docs/docs/reference/: ckit-compare.md  ckit-memory-allocators.md  ckit-memory-bytes.md  ckit-memory-general-heap.md  ckit-testing.md  k4c-assert.md  k4c-error.md  k4c-logging.md  k4c-memory-allocators.md  k4c-memory-arena.md  k4c-memory-general-heap.md  k4c-memory-test-allocator.md  k4c-memory-utils.md  k4c-testing.md  vstd-assert.md  vstd-memory-allocators.md  vstd-memory-arena.md  vstd-memory-general-heap.md  vstd-memory-test-allocator.md  vstd-testing.md
docs/docs/stylesheets/: extra.css
include/ckit/: compare.h  panic.h  testing.h
include/ckit/common/: panic.h
include/ckit/datastruct/: binary_heap.h  deque.h  doubly_linked_list.h  hashmap.h  hashset.h  linked_list.h  string.h  vector.h
include/ckit/mem/allocators/: allocator.h
include/ckit/memory/: bytes.h  utils.h
include/ckit/memory/allocators/: allocator.h  general_heap.h
include/cstd/mem/: allocator.h  bytes.h
include/k4c/: assert.h  error.h  logging.h  testing.h
include/k4c/ds/: binary_heap.h  deque.h  doubly_linked_list.h  hashmap.h  hashset.h  iterator.h  linked_list.h  string.h  vector.h
include/k4c/io/: file_reader.h  reader.h
include/k4c/memory/: allocator.h  arena.h  general_heap.h  test_allocator.h  utils.h
include/vstd/: assert.h  testing.h
include/vstd/datastruct/: binary_heap.h  deque.h  doubly_linked_list.h  hashmap.h  hashset.h  iterator.h  linked_list.h  string.h  vector.h
include/vstd/memory/: arena.h  general_heap.h  test_allocator.h
nix/: app.nix  flake-module.nix  format.nix  package.nix  shell.nix
nix/checks/: build.nix  default.nix  format.nix
scripts/: code-check  ctests  docs-build  validate-naming.sh
src/: logging.c  queue.c  queue.h  testing.c  vector.c  vector.h
src/common/: compare.c  panic.c
src/datastruct/: binary_heap.c  deque.c  doubly_linked_list.c  hash_common.c  hash_common.h  hashmap.c  hashset.c  iterator.c  linked_list.c  queue.c  string.c  vector.c
src/datastruct/array/: array.c
src/ds/: binary_heap.c  deque.c  doubly_linked_list.c  hash_common.c  hash_common.h  hashmap.c  hashset.c  iterator.c  linked_list.c  string.c  vector.c
src/io/: file_reader.c  reader.c
src/mem/: allocator.c  bytes.c
src/mem/allocators/: allocator.c  general_heap.c
src/memory/: allocator.c  arena.c  bytes.c  general_heap.c  test_allocator.c  utils.c  utils.h
src/memory/allocators/: allocator.c  arena.c  general_heap.c
tests/common/compare/: cmp_test.c  eq_test.c
tests/datastruct/: binary_heap_test.c  deque_test.c  doubly-linked-list_test.c  hashmap_test.c  hashset_test.c  linked_list_test.c  string_test.c  vector_test.c
tests/datastruct/binary_heap/: init_test.c  peek_test.c  pop_test.c  push_test.c
tests/datastruct/deque/: init_test.c  peekback_test.c  peekleft_test.c  popback_test.c  popleft_test.c  push_test.c  pushfront_test.c
tests/datastruct/hashmap/: allocator_test.c  init_test.c  put_get_test.c  remove_growth_test.c
tests/datastruct/hashset/: allocator_test.c  contains_test.c  get_test.c  init_test.c  insert_test.c  remove_test.c
tests/datastruct/linked_list/: head_test.c  init_test.c  popleft_test.c  push_test.c  pushfront_test.c  remove_after_test.c
tests/datastruct/queue/: init_test.c  popback_test.c  popleft_test.c  push_test.c
tests/datastruct/string/: allocator_test.c  append_test.c  clear_test.c  init_test.c  prepend_test.c  search_test.c
tests/datastruct/vector/: free_test.c  init_test.c  pop_test.c  push_test.c
tests/ds/: binary_heap_test.c  deque_test.c  doubly_linked_list_test.c  hashmap_test.c  hashset_test.c  linked_list_test.c  string_test.c  vector_test.c
tests/io/: file_reader_test.c  file_test.c  reader_test.c
tests/logging/: logging_test.c
tests/memory/arena/: alloc_test.c  init_test.c  realloc_test.c  reset_test.c
tests/memory/heap/: alloc_free_test.c  init_test.c  realloc_test.c
tooling/cmake/: benchmarks.cmake  tests.cmake
tools/cmake/: ckitConfig.cmake.in  install.cmake  tests.cmake
tools/nix/: package.nix
